all po files updated from develop at 2019-03-30 14:29

--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-21 18:59+0100\n"
-"PO-Revision-Date: 2019-03-21 19:01+0100\n"
+"POT-Creation-Date: 2019-03-30 14:24+0100\n"
+"PO-Revision-Date: 2019-03-30 14:29+0100\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -1802,6 +1802,9 @@ msgstr "Colombie"
 
 msgid "Color format"
 msgstr "Format de couleur"
+
+msgid "Combined"
+msgstr "Combiné"
 
 msgid "Combo"
 msgstr "Combo"
@@ -4069,12 +4072,6 @@ msgstr "Configurer Hotkey"
 msgid "Hotkey zap"
 msgstr "Hotkey zap"
 
-msgid "Hotswitchable"
-msgstr "Permutable à chaud"
-
-msgid "Hotswitchable tuner"
-msgstr "Types de tuner permutable à chaud"
-
 msgid "How many minutes do you want add to the recording?"
 msgstr "Combien de minutes voulez-vous ajouter à l'enregistrement?"
 
@@ -4885,6 +4882,9 @@ msgstr "Intervalle minimum d'envoi"
 msgid "Missing "
 msgstr "Manquant "
 
+msgid "Mode"
+msgstr "Mode"
+
 msgctxt "Satellite configuration mode"
 msgid "Mode"
 msgstr "Mode"
@@ -4898,6 +4898,9 @@ msgstr "Modèle"
 
 msgid "Model: "
 msgstr "Modèle: "
+
+msgid "Modes"
+msgstr "Modes"
 
 msgid "Modulation"
 msgstr "Modulation"
@@ -5036,6 +5039,9 @@ msgstr "Downmix multi-canaux"
 
 msgid "Multi-EPG bouquet selection"
 msgstr "Sélection bouquet Multi-EPG"
+
+msgid "MultiType"
+msgstr "TypeMultiple"
 
 msgid "Multiboot"
 msgstr "Multiboot"
@@ -5287,9 +5293,6 @@ msgstr "Pas de veille"
 
 msgid "No stream clients"
 msgstr "Aucun client de flux (stream)"
-
-msgid "No suitable sat tuner found!"
-msgstr "Aucun tuner sat approprié trouvé!"
 
 msgid "No tags are set on these movies."
 msgstr "Aucune étiquette définie sur ces films."
@@ -8360,9 +8363,6 @@ msgstr "Basculer vers sous-service précédent"
 msgid "Switch to radio mode"
 msgstr "Basculer en mode radio"
 
-msgid "Switchable tuner types"
-msgstr "Types de tuner permutables"
-
 msgid "Switzerland"
 msgstr "Suisse"
 
@@ -8401,7 +8401,7 @@ msgstr ""
 "\n"
 "Traducteur: Pr2\n"
 "Support: www.openpli.org\n"
-"Dernière MAJ: 06-03-2019"
+"Dernière MAJ: 30-03-2019"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -11423,6 +11423,9 @@ msgstr "non testable"
 
 msgid "until standby/restart"
 msgstr "Jusqu'à veille/redémarrage"
+
+msgid "update bookmarks"
+msgstr "mettre à jour les signets"
 
 msgid "user defined"
 msgstr "Défini par l'utilisateur"
