--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-21 18:59+0100\n"
+"POT-Creation-Date: 2019-03-30 14:28+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -1809,6 +1809,10 @@ msgstr "Colombia"
 
 msgid "Color format"
 msgstr "Kleurformaat"
+
+#, fuzzy
+msgid "Combined"
+msgstr "Colombia"
 
 msgid "Combo"
 msgstr "Combo"
@@ -4251,14 +4255,6 @@ msgstr "Instellen Hotkey plugin"
 msgid "Hotkey zap"
 msgstr "Hotkey zappen"
 
-#, fuzzy
-msgid "Hotswitchable"
-msgstr "niet te testen"
-
-#, fuzzy
-msgid "Hotswitchable tuner"
-msgstr "Schakelbare tunertypes:"
-
 msgid "How many minutes do you want add to the recording?"
 msgstr "Hoeveel minuten wilt u aan de opname toevoegen?"
 
@@ -5078,6 +5074,10 @@ msgstr "Minimum verzend interval"
 msgid "Missing "
 msgstr "Ontbrekend "
 
+#, fuzzy
+msgid "Mode"
+msgstr "Modus"
+
 msgctxt "Satellite configuration mode"
 msgid "Mode"
 msgstr "Modus"
@@ -5091,6 +5091,10 @@ msgstr "Model"
 
 msgid "Model: "
 msgstr "Model: "
+
+#, fuzzy
+msgid "Modes"
+msgstr "Modus"
 
 msgid "Modulation"
 msgstr "Modulatie"
@@ -5229,6 +5233,10 @@ msgstr "Multi channel downmix"
 
 msgid "Multi-EPG bouquet selection"
 msgstr "Multi-EPG bouquet selectie"
+
+#, fuzzy
+msgid "MultiType"
+msgstr "Multimedia"
 
 msgid "Multiboot"
 msgstr "Multiboot"
@@ -5482,9 +5490,6 @@ msgstr "Geen standby"
 
 msgid "No stream clients"
 msgstr "Er zijn geen streamende clients."
-
-msgid "No suitable sat tuner found!"
-msgstr "Geen passende satelliettuner gevonden!"
 
 msgid "No tags are set on these movies."
 msgstr "Geen markeringen geplaatst op deze opnames"
@@ -8579,10 +8584,6 @@ msgstr "Ga naar het vorige subkanaal"
 
 msgid "Switch to radio mode"
 msgstr "Schakel naar de radio modus"
-
-#, fuzzy
-msgid "Switchable tuner types"
-msgstr "Schakelbare tunertypes:"
 
 msgid "Switzerland"
 msgstr "Zwitserland"
@@ -11693,6 +11694,10 @@ msgstr "niet te testen"
 
 msgid "until standby/restart"
 msgstr "tot standby/herstart"
+
+#, fuzzy
+msgid "update bookmarks"
+msgstr "Automatische bladwijzers"
 
 msgid "user defined"
 msgstr "Zelf gedefinieerd"
