--- a/po/cs.po
+++ b/po/cs.po
@@ -177,7 +177,7 @@ msgstr "rozšíření."
 
 #
 msgid " min"
-msgstr "min"
+msgstr ""
 
 msgid " ms"
 msgstr "ms"
@@ -2583,8 +2583,8 @@ msgstr "Nelze nahrávat z důvodu konfliktu časovače %s"
 msgid "Could not record due to invalid service %s"
 msgstr "Nelze nahrávat z důvodu neplatného programu %s"
 
-msgid "Could not some setup the required directories on the media (e.g. USB stick) - Please verify media and try again!"
-msgstr "Nelze nastavit požadované adresáře na médiu (např. na USB) - Ověřte médium a zkuste to znovu!"
+msgid "Unable to create the required directories on the media (e.g. USB stick or Harddisk) - Please verify media and try again!"
+msgstr "Nelze nastavit požadované adresáře na médiu (např. na USB nebo HDD) - Ověřte médium a zkuste to znovu!"
 
 msgid "Country"
 msgstr "Země"
@@ -9685,7 +9685,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®29.3.2019"
+"®1.4.2019"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
