--- a/po/cs.po
+++ b/po/cs.po
@@ -150,13 +150,13 @@ msgid " (Partition %d)"
 msgstr " (Oddíl %d)"
 
 msgid " (PiP)"
-msgstr ""
+msgstr " (Pip)"
 
 msgid " (Radio)"
 msgstr " (Rádio)"
 
 msgid " (TV)"
-msgstr ""
+msgstr " (TV)"
 
 #
 msgid " (disabled)"
@@ -177,7 +177,7 @@ msgstr "rozšíření."
 
 #
 msgid " min"
-msgstr ""
+msgstr " min"
 
 msgid " ms"
 msgstr "ms"
@@ -4703,8 +4703,8 @@ msgid "If enabled, then there will be displayed icons for new/unseen items too."
 msgstr "Jestliže je povoleno, budou zobrazovány ikony také pro nové/neshlédnuté položky."
 
 #
-msgid "If is disabled, then after Copy/Move will not be target directory stored into bookmarks."
-msgstr "Jestliže je zakázáno, funkce Kopírovat/Přemístit nebudou ukládat cílový adresář do záložek."
+msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
+msgstr "Jestliže je povoleno, funkce Kopírovat/Přemístit budou ukládat cílový adresář do záložek."
 
 #
 msgid "If is enabled and movie playback is finished, then after return to movielist will not be automaticaly start service playback."
