Update po files using updateallpo-multiOS.sh

--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-28 20:51+0100\n"
+"POT-Creation-Date: 2019-04-10 14:52+0430\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -1113,6 +1113,16 @@ msgstr "Také při standby"
 
 #
 msgid "Alternative"
+msgstr "alternativní"
+
+#
+#, fuzzy
+msgid "Alternative 1"
+msgstr "alternativní"
+
+#
+#, fuzzy
+msgid "Alternative 2"
 msgstr "alternativní"
 
 msgid "Alternative URL for images listed on FlashImage"
@@ -2583,9 +2593,6 @@ msgstr "Nelze nahrávat z důvodu konfliktu časovače %s"
 msgid "Could not record due to invalid service %s"
 msgstr "Nelze nahrávat z důvodu neplatného programu %s"
 
-msgid "Unable to create the required directories on the media (e.g. USB stick or Harddisk) - Please verify media and try again!"
-msgstr "Nelze nastavit požadované adresáře na médiu (např. na USB nebo HDD) - Ověřte médium a zkuste to znovu!"
-
 msgid "Country"
 msgstr "Země"
 
@@ -3331,6 +3338,9 @@ msgstr "Nepřepínat a zakázat časovač"
 msgid "Don't zap and remove timer"
 msgstr "Nepřepínat a odstranit časovač"
 
+msgid "Done"
+msgstr ""
+
 #
 #, python-format
 msgid "Done - Installed, upgraded or removed %d package (%s)"
@@ -3661,9 +3671,6 @@ msgstr "Zadejte trvalý PIN kód"
 #
 msgid "Enter pin code"
 msgstr "Zadejte pin kód"
-
-msgid "Enter text and exit"
-msgstr "Zadat text a zavřít"
 
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
 msgstr "Zadejte frekvenci kterou přepíná Váš LNB mezi nízkým a vysokým pásmem. Další informace naleznete v technické dokumentaci Vašeho LNB."
@@ -4695,16 +4702,16 @@ msgstr "Island"
 msgid "Icons"
 msgstr "Ikony"
 
+#
+msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
+msgstr "Jestliže je povoleno, funkce Kopírovat/Přemístit budou ukládat cílový adresář do záložek."
+
 msgid "If enabled, display shows 12 chars instead 8, but in latin-1/translit only."
 msgstr "Jestliže je povoleno, displej zobrazuje 12 znaků místo 8, ale pouze v latin-1/translit."
 
 #
 msgid "If enabled, then there will be displayed icons for new/unseen items too."
 msgstr "Jestliže je povoleno, budou zobrazovány ikony také pro nové/neshlédnuté položky."
-
-#
-msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
-msgstr "Jestliže je povoleno, funkce Kopírovat/Přemístit budou ukládat cílový adresář do záložek."
 
 #
 msgid "If is enabled and movie playback is finished, then after return to movielist will not be automaticaly start service playback."
@@ -7867,6 +7874,10 @@ msgstr "Saúdská Arábie"
 msgid "Save"
 msgstr "Uložit"
 
+#, fuzzy
+msgid "Save / Enter text and exit"
+msgstr "Zadat text a zavřít"
+
 msgid "Save and exit"
 msgstr "Uložit a zavřít"
 
@@ -8000,6 +8011,10 @@ msgstr "Zpoždění přetáčení"
 
 msgid "Scroll repeats"
 msgstr "Opakování přetáčení"
+
+#, fuzzy
+msgid "Search"
+msgstr "Hledání"
 
 #
 msgid "Search east"
@@ -9675,6 +9690,15 @@ msgstr "Systém"
 msgid "System & Modulation"
 msgstr "Systém & Modulace"
 
+msgid "T2MI PID"
+msgstr ""
+
+msgid "T2MI PLP"
+msgstr ""
+
+msgid "T2MI PLP ID"
+msgstr ""
+
 msgid "T2MI RAW Mode"
 msgstr "T2MI RAW mód"
 
@@ -10576,6 +10600,9 @@ msgstr "Ukrajinsky"
 
 msgid "Unable to backup settings as the AutoBackup plugin is missing, do you want to continue?"
 msgstr "Není možné zazálohovat nastavení, protože chybí plugin AutoBackup. Chcete pokračovat?"
+
+msgid "Unable to create the required directories on the media (e.g. USB stick or Harddisk) - Please verify media and try again!"
+msgstr "Nelze nastavit požadované adresáře na médiu (např. na USB nebo HDD) - Ověřte médium a zkuste to znovu!"
 
 #
 #
