cosmetic in cs.po

--- a/po/cs.po
+++ b/po/cs.po
@@ -2203,7 +2203,7 @@ msgid "Configure if the HDMI EDID checking should be bypassed as this might solv
 msgstr "Nastavuje vynechání kontroly HDMI EDID, které může vyřešit problémy s některými TV."
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
-msgstr "Nastavuje, zda by se měly titulky přepínat mezi normal, italic, bold a bolditalic"
+msgstr "Nastavuje, zda se mají titulky přepínat mezi normálními, kurzívou, tučnými a tučnou kurzívou."
 
 #
 msgid "Configure interface"
@@ -2447,7 +2447,7 @@ msgid "Configure whether multi channel sound tracks should be downmixed to stere
 msgstr "Nastavuje, zda bude vícekanálový zvuk přepočítáván na stereo."
 
 msgid "Configure whether or not a rotor position will be displayed on the infobar"
-msgstr "Nastavuje, zda (a jak) bude zobrazována pozice pozicioneru v infobaru"
+msgstr "Nastavuje, zda (a jak) bude zobrazována pozice pozicioneru v infobaru."
 
 msgid "Configure whether or not an icon should be shown when your motorized dish is moving."
 msgstr "Nastavuje, zda budou nebo nebudou zobrazovány ikony při natáčení paraboly motorem."
@@ -2460,7 +2460,7 @@ msgstr "Nastavuje barevný formát pro SCART výstup."
 
 #
 msgid "Configure which tuner for recordings will be preferred, when more than one tuner is available."
-msgstr "Nastavuje preferovaný tuner pro nahrávání pro případ, že je využitelný více než jeden tuner."
+msgstr "V případě, že je využitelný více než jeden tuner nastavuje preferovaný tuner pro nahrávání."
 
 msgid "Configure which tuner type will be preferred when the same service is available on different types of tuners. Choose 'no priority' to try each alternative one by one regardless of the tuner type."
 msgstr "Konfigurace, který typ tuneru bude mít přednost, je-li k dispozici stejná služba pro různé typy tunerů. Volba \"Žádná priorita\" zkusí každou alternativu jednu po druhé nezávisle na typu tuneru."
@@ -2994,11 +2994,11 @@ msgstr "Detekovat ostatní boxy před standby"
 
 #
 msgid "Detected HDD:"
-msgstr "Detekován HDD:"
+msgstr "Detekované HDD:"
 
 #
 msgid "Detected NIMs:"
-msgstr "Detekovány NIMs:"
+msgstr "Detekované tunery:"
 
 #
 msgid "Devicename:"
@@ -3540,7 +3540,7 @@ msgid "Enable auto fast scan for %s"
 msgstr "Povolit automatický Fast scan pro %s"
 
 msgid "Enable bouquet selection in multi-EPG"
-msgstr "Povolit výběr přehledu při spuštění multi-EPG"
+msgstr "Povolí výběr přehledu při spuštění multi-EPG."
 
 msgid "Enable fallback remote receiver"
 msgstr "Povolit záložní přijímač"
@@ -3652,7 +3652,7 @@ msgid "Enter URL"
 msgstr "Zadejte URL"
 
 msgid "Enter an URL where alternative images could be listed for FlashImage"
-msgstr "Zadejte URL, kde by mohly být alternativní obrazy pro FlashImage"
+msgstr "Zadejte URL, kde by mohly být alternativní obrazy pro FlashImage."
 
 msgid "Enter if you are in the east or west hemisphere."
 msgstr "Zadejte, zda jste na východní nebo západní polokouli."
@@ -4780,13 +4780,13 @@ msgid "Image: "
 msgstr ""
 
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
-msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v případě probuzení z pohotovostního režimu"
+msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v případě probuzení z pohotovostního režimu."
 
 msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
-msgstr "Ze záložního přijímače se importují programy a/nebo EPG po spuštění přijímače"
+msgstr "Ze záložního přijímače se importují programy a/nebo EPG po spuštění přijímače."
 
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
-msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v případě, že jsou přijímač nebo enigma2 restartovány"
+msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v případě, že jsou přijímač nebo enigma2 zrestartovány."
 
 msgid "Import channels from fallback tuner"
 msgstr "Import ze záložního přijímače"
@@ -5937,7 +5937,7 @@ msgid "Network:"
 msgstr "Síť:"
 
 msgid "Never decrypt the content while recording. This overrides the individual timer settings globally. If enabled, recordings are stored in crypted presentation and must be decrypted afterwards (sometimes called offline decoding). Default: off."
-msgstr "Nedekódovat obsah při nahrávání. Přepisuje globálně individuální nastavení časovače. Jestliže je povoleno, nahrávky se ukládají v kódované podobě a musí být později dekódovány (offline dekódování). Standardně: vypnuto"
+msgstr "Nedekóduje obsah při nahrávání. Přepisuje globálně individuální nastavení časovače. Jestliže je povoleno, nahrávky se ukládají v kódované podobě a musí být později dekódovány (tzv. offline dekódování). Standardně vypnuto."
 
 #
 msgid "Never decrypt while recording"
@@ -6030,7 +6030,7 @@ msgstr "Žádná informace o programu. Nekonečné nahrávání."
 
 #
 msgid "No fast winding possible yet.. but you can use the number buttons to skip forward/backward!"
-msgstr "Rychlé přetáčení není nyní možné.. ale můžete použít číselná tlačítka pro přeskočení dopředu/dozadu!"
+msgstr "Rychlé přetáčení není nyní možné,,, ale můžete použít číselná tlačítka pro přeskočení dopředu/dozadu!"
 
 msgid "No free index available"
 msgstr "Žádný volný index k dispozici"
@@ -6236,7 +6236,7 @@ msgstr "Nyní použijte nastavení kontrastu pro nastavení světlosti pozadí n
 
 #
 msgid "Number of channels shown in channel selection list"
-msgstr "Počet zobrazovaných kanálů v seznamu kanálů"
+msgstr "Počet zobrazovaných kanálů v seznamu kanálů."
 
 msgid "Number of repeating text on display."
 msgstr "Počet opakování textu na displeji."
@@ -6294,7 +6294,7 @@ msgid "On end of movie (as menu)"
 msgstr "Po skončení filmu (jako menu)"
 
 msgid "On valid ONIDs, ignore frequency sub network part"
-msgstr "Při platných ONID ignorovat frekvenci podsítě"
+msgstr "Při platných ONID ignorovat frekvenci podsítě."
 
 #
 msgid "One"
@@ -7531,7 +7531,7 @@ msgid "Repeats"
 msgstr "Opakování"
 
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
-msgstr "Nahradí `- ` v dialozích, které mají obarvený text jednotlivých mluvčích (jako teletextové titulky pro sluchově postižené)"
+msgstr "Nahradí `- ` v dialozích, které mají obarvený text jednotlivých mluvčích (jako teletextové titulky pro sluchově postižené)."
 
 msgid "Request for physical address report"
 msgstr "Požadavek na ohlášení fyzické adresy"
@@ -8592,13 +8592,13 @@ msgid "Set startup service"
 msgstr "Nastavit kanál po spuštění"
 
 msgid "Set the User ID of the OpenWebif from your fallback tuner"
-msgstr "Nastavte uživatelské jméno pro OpenWebIf z Vašeho záložního přijímače"
+msgstr "Nastavte uživatelské jméno pro OpenWebIf z Vašeho záložního přijímače."
 
 msgid "Set the password of the OpenWebif from your fallback tuner"
-msgstr "Nastavte heslo pro OpenWebIf z Vašeho záložního přijímače"
+msgstr "Nastavte heslo pro OpenWebIf z Vašeho záložního přijímače."
 
 msgid "Set the port of the OpenWebif from your fallback tuner"
-msgstr "Nastavte port pro OpenWebIf z Vašeho záložního přijímače"
+msgstr "Nastavte port pro OpenWebIf z Vašeho záložního přijímače."
 
 #
 msgid "Set the type of the progress indication in the channel selection screen."
@@ -8825,10 +8825,10 @@ msgid "Show multi channel EPG"
 msgstr "Zobrazovat vícekanálovou EPG"
 
 msgid "Show notification when import channels and/or EPG from remote receiver URL did not complete"
-msgstr "Zobrazí zprávu, jestliže import ze vzdáleného přijímače byl neúspěšný"
+msgstr "Zobrazí zprávu, jestliže import ze vzdáleného přijímače byl neúspěšný."
 
 msgid "Show notification when import channels and/or EPG from remote receiver URL is completed"
-msgstr "Zobrazí zprávu po úspěšném importu programů a/nebo EPG ze vzdáleného přijímače"
+msgstr "Zobrazí zprávu po úspěšném importu programů a/nebo EPG ze vzdáleného přijímače."
 
 msgid "Show notification when import channels was not successful"
 msgstr "Zobrazit zprávu při neúspěšném importu"
@@ -8848,7 +8848,7 @@ msgstr "Zobrazovat pikony na displeji"
 
 #
 msgid "Show positioner movement"
-msgstr "Zobrazovat otáčení pozicioneru."
+msgstr "Zobrazovat otáčení pozicioneru"
 
 msgid "Show positioner position"
 msgstr "Zobrazovat pozici pozicioneru"
@@ -9707,7 +9707,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®18.4.2019"
+"®20.4.2019"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10076,7 +10076,7 @@ msgid "This option allows you to force the HLG modes for UHD"
 msgstr "Tato volba umožňuje pro UHD vynutit režimy HLG"
 
 msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button"
-msgstr "Umožňuje skrýt a třídit položky menu. Při zvolení může uživatel měnit pořadí a skrýt položky menu pomocí modrého tlačítka a následně pomocí < >"
+msgstr "Umožňuje skrýt a třídit položky menu. Při uživatelském nastavení může uživatel měnit pořadí a skrývat položky menu pomocí modrého tlačítka a následně pomocí < >."
 
 msgid "This option allows you to power off the display."
 msgstr "Toto nastavení umožňuje vypnout displej."
@@ -10631,7 +10631,7 @@ msgid "Unencrypted"
 msgstr "Nezabezpečeno"
 
 msgid "Unexpected error while retreiving fallback tuner's timer information"
-msgstr "Neočekávaná chyba při načítání informací o časovači záložního přijímače"
+msgstr "Neočekávaná chyba při načítání informací o časovači záložního přijímače."
 
 #
 msgid "UnhandledKey"
@@ -11259,10 +11259,10 @@ msgid "What type of service scan do you want?"
 msgstr "Jaký typ vyhledání programů chcete?"
 
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are upgraded"
-msgstr "Jestliže bude povoleno, enigma2 bude načítat odstraněné uživatelské přehledy. To znamená, že uživatelské přehledy, které jsou k dispozici, ale nejsou zahrnuty v bouquets.tv nebo bouquets.radio, budou načteny. To například umožňuje zachovat vlastní uživatelské přehledy, zatímco instalovaná nastavení jsou aktualizována"
+msgstr "Enigma2 bude načítat odstraněné uživatelské přehledy. To znamená, že uživatelské přehledy, které jsou k dispozici, ale nejsou zahrnuty v bouquets.tv nebo bouquets.radio, budou načteny. To například umožňuje zachovat vlastní uživatelské přehledy, zatímco instalovaná nastavení jsou aktualizována."
 
 msgid "When enabled the PiP can be closed by the exit button."
-msgstr "Jestliže je povoleno, pak PIP může být ukončen tlačítkem Exit"
+msgstr "Jestliže je povoleno, pak PIP může být ukončen tlačítkem Exit."
 
 msgid "When enabled the arrow buttons around the OK button will follow the 'neutrino' style zap controls instead of the enigma2 style."
 msgstr "Jestliže je povoleno, pak šipky okolo tlačítka OK budou používat 'neutrino' styl přepínání namísto stylu enigma2."
@@ -11271,13 +11271,13 @@ msgid "When enabled the left, right, CH+/-, B+/-, P+/- buttons will follow the '
 msgstr "Jestliže je povoleno, pak tlačítka vlevo, vpravo, CH+/-, B+/-, P+/- budou používat 'neutrino' styl pro přepínání namísto stylu enigma2."
 
 msgid "When enabled the set top box is able to wakeup on LAN"
-msgstr "Jestliže je zapnuto, pak je přijímač schopen probouzení v síti LAN"
+msgstr "Jestliže je zapnuto, pak je možné přijímač probouzet v síti LAN pomocí Magic packetu."
 
 msgid "When enabled the timer from the fallback tuner is imported"
-msgstr "Jestliže je povoleno, pak jsou do přehledu časovačů importovány časovače ze záložního přijímače"
+msgstr "Jestliže je povoleno, pak jsou do přehledu časovačů importovány časovače ze záložního přijímače."
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
-msgstr "Pokud je povoleno a vyberete nový kanál ve výběru kanálů, pak výběr kanálů nebude uzavřen. Zavře se pouze tehdy, jestliže vyberete aktuální přehrávanou službu. To je druh režimu náhledu"
+msgstr "Pokud je povoleno a vyberete nový kanál ve výběru kanálů, pak výběr kanálů nebude uzavřen a zavře se pouze tehdy, jestliže vyberete aktuální přehrávaný program. Jde o druh režimu náhledu."
 
 msgid "When enabled you can control the volume with the arrow buttons instead of getting the channel selection list"
 msgstr "Pokud je povoleno, pak můžete ovládat pomocí tlačítek se šipkami hlasitost namísto přístupu do seznamu kanálů"
@@ -11296,7 +11296,7 @@ msgid "When enabled you can specify an extra timeframe when the inactivity sleep
 msgstr "Můžete zadat další časový úsek, kdy bude časovač neaktivity ignorován. Po tuto dobu je zakázán odpočet neaktivity, nikoliv vlastní detekce neaktivity."
 
 msgid "When enabled you can zap channels with the  CH+/-, B+/-, P+/- buttons instead of opening the channel selection list."
-msgstr "Jestliže je povoleno, pak tlačítky  CH+/-, B+/-, P+/- můžete přepínat kanály místo otevření přehledu kanálů.."
+msgstr "Jestliže je povoleno, pak tlačítky CH+/-, B+/-, P+/- můžete přepínat kanály místo otevření přehledu kanálů."
 
 msgid "When enabled you get the channel selection list via the OK button, the infobar toggle is then transfered to exit button"
 msgstr "Pokud je povoleno, stisknutím tlačítka OK zobrazíte přehled kanálů a přepínání Infobaru je převedeno pod tlačítko Exit."
@@ -11330,7 +11330,7 @@ msgid "When enabled, a warning will be displayed and the user will get an option
 msgstr "Jestliže je povoleno, bude zobrazeno varování a uživatel bude mít možnost timeshift ukončit nebo pokračovat."
 
 msgid "When enabled, always descramble receiving http streams. This takes up more resources (descrambling demuxers), only enable if necessary. Individual streams are always descrambled if 0x100 is added to the service type, regardless of this setting. Default off."
-msgstr "Při povolení budou vždy přijímané http streamy dekódovány. To zabírá více zdrojů (dekódování demuxery), proto povolte pouze, je-li  to nezbytné. Jednotlivé streamy jsou vždy dekódované, pokud je přidáno do typu služby 0x100, bez ohledu na toto nastavení. Standardně vypnuto."
+msgstr "Při povolení budou přijímané http streamy vždy dekódovány. To zabírá více zdrojů (dekódovací demuxery), proto povolte pouze, je-li  to potřeba. Jednotlivé streamy jsou vždy dekódované, pokud je 0x100 přidáno do typu služby, bez ohledu na toto nastavení. Standardně vypnuto."
 
 #
 msgid "When enabled, authentication is required to watch http streams."
@@ -11392,13 +11392,13 @@ msgstr "Při povolení mohou být programy seskupovány do vícenásobných pře
 
 #
 msgid "When enabled, show channel numbers in the channel selection screen."
-msgstr "Při povolení zobrazuje čísla kanálů ve výběru programů"
+msgstr "Při povolení budou zobrazována čísla kanálů ve výběru programů."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Jestliže je povoleno, budou použity titulky pro sluchově postižené."
 
 msgid "When enabled, subtitles for the hearing impaired will be preferred over normal subtitles, when both types are available."
-msgstr "Jestliže je povoleno, titulky pro sluchově postižené budou preferovány před normálními titulky, jestliže oba typy budou dostupné."
+msgstr "Jestliže budou dostupné oba typy, titulky pro sluchově postižené budou preferovány před normálními titulky."
 
 msgid "When enabled, teletext pages will be cached, allowing faster access."
 msgstr "Povolení vyrovnávací paměti pro teletext zajišťuje rychlejší přistup."
@@ -11437,7 +11437,7 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr "Jestliže je povoleno, přijímač bude vybírat AC3 stopu (bude-li dostupná)."
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
-msgstr "Jestliže je povoleno, přijímač bude vybírat AC3+ stopu (bude-li dostupná)"
+msgstr "Jestliže je povoleno, přijímač bude vybírat AC3+ stopu (bude-li dostupná)."
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
 msgstr "Jestliže je povoleno, toto nastavení má větší váhu než 'Preferovaný tuner pro nahrávání'."
