small fix in cs.po

--- a/po/cs.po
+++ b/po/cs.po
@@ -6030,7 +6030,7 @@ msgstr "Žádná informace o programu. Nekonečné nahrávání."
 
 #
 msgid "No fast winding possible yet.. but you can use the number buttons to skip forward/backward!"
-msgstr "Rychlé přetáčení není nyní možné,,, ale můžete použít číselná tlačítka pro přeskočení dopředu/dozadu!"
+msgstr "Rychlé přetáčení není nyní možné.. ale můžete použít číselná tlačítka pro přeskočení dopředu/dozadu!"
 
 msgid "No free index available"
 msgstr "Žádný volný index k dispozici"
