--- a/po/de.po
+++ b/po/de.po
@@ -164,10 +164,6 @@ msgstr " (geringer als in jedem auto)"
 msgid " extensions."
 msgstr " Erweiterungen."
 
-#, fuzzy
-msgid " min"
-msgstr "%d min"
-
 msgid " ms"
 msgstr " ms"
 
@@ -376,7 +372,7 @@ msgstr "%d:%02d"
 msgid "%k:%M %e/%m"
 msgstr "%k:%M %e/%m"
 
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "%s\n"
 "Do you still want to flash image\n"
@@ -610,7 +606,6 @@ msgstr ": 0000 - Standard (deaktiviert)"
 msgid "<Current movielist location>"
 msgstr "<Aktuelles Filmlisten-Verzeichnis>"
 
-#, fuzzy
 msgid "<Default Skin>"
 msgstr "Voreinstellungen"
 
@@ -649,7 +644,7 @@ msgstr ""
 "Wollen Sie diese Version behalten?"
 
 msgid "A file from media is in use!"
-msgstr ""
+msgstr "Eine Media-Datei ist aktiv"
 
 msgid ""
 "A finished record timer wants to set your\n"
@@ -979,14 +974,6 @@ msgid "Also on standby"
 msgstr "Auch in Standby"
 
 msgid "Alternative"
-msgstr "Alternativen hinzufügen"
-
-#, fuzzy
-msgid "Alternative 1"
-msgstr "Alternativen hinzufügen"
-
-#, fuzzy
-msgid "Alternative 2"
 msgstr "Alternativen hinzufügen"
 
 msgid "Alternative URL for images listed on FlashImage"
@@ -1812,9 +1799,8 @@ msgstr "Kolumbien"
 msgid "Color format"
 msgstr "Farbformat"
 
-#, fuzzy
 msgid "Combined"
-msgstr "Kolumbien"
+msgstr "kombiniert"
 
 msgid "Combo"
 msgstr "Combo"
@@ -1871,21 +1857,17 @@ msgstr "Konfigurationsmodus: %s"
 msgid "Configuration..."
 msgstr "Konfiguration…"
 
-#, fuzzy
-msgid "Configure ATSC"
-msgstr "Konfiguriere"
+msgid "Configure DVB-ATSC"
+msgstr "Konfiguriere DVB-ATSC"
 
-#, fuzzy
 msgid "Configure DVB-C"
-msgstr "Konfiguriere"
+msgstr "Konfiguriere DVB-C"
 
-#, fuzzy
 msgid "Configure DVB-S"
-msgstr "Konfiguriere"
+msgstr "Konfiguriere DVB-S"
 
-#, fuzzy
 msgid "Configure DVB-T"
-msgstr "Konfiguriere"
+msgstr "Konfiguriere DVB-T"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Konfiguriert eine zusätzliche Verzögerung zur besseren Synchronisation externer Untertitel."
@@ -2291,6 +2273,9 @@ msgstr "Aufnahme wegen in Konflikt stehendem Timer %s fehlgeschlagen"
 msgid "Could not record due to invalid service %s"
 msgstr "Aufnahme wegen ungültigem Kanal %s fehlgeschlagen"
 
+msgid "Could not some setup the required directories on the media (e.g. USB stick) - Please verify media and try again!"
+msgstr "Es konnten nicht die benötigten Verzeichnisse auf dem Medium erstellt werden - Bitte überprüfen sie das Medium und versuchen sie es nochmal!"
+
 msgid "Country"
 msgstr "Land"
 
@@ -2489,7 +2474,6 @@ msgstr "Zeit/Datum-Eingabe"
 msgid "Debug to file"
 msgstr "Debuggen zur Datei"
 
-#, fuzzy
 msgid "Deep Standby LED"
 msgstr "Tiefschlaf / Ausschalten"
 
@@ -2733,11 +2717,9 @@ msgstr "Inhalt mit einem Bildformate grösser als 16:9 anzeigen als"
 msgid "Display EPG as MultiEPG"
 msgstr ""
 
-#, fuzzy
 msgid "Display EPG info for current event"
 msgstr "Timeshift nur für aktuelle Sendung speichern"
 
-#, fuzzy
 msgid "Display EPG list for current channel"
 msgstr "EPG für aktuellen Kanal anzeigen…"
 
@@ -2919,7 +2901,7 @@ msgid "Don't zap and remove timer"
 msgstr "Nicht umschalten und Timer löschen"
 
 msgid "Done"
-msgstr ""
+msgstr "ausgeführt"
 
 #, python-format
 msgid "Done - Installed, upgraded or removed %d package (%s)"
@@ -3167,7 +3149,7 @@ msgstr "Benutzeroberfläche (Enigma) startet neu: %d\n"
 
 #, python-format
 msgid "Enigma debug level: %d\n"
-msgstr ""
+msgstr "Enigma debug level: %d\n"
 
 msgid "Enigma version: "
 msgstr "Enigma-version:"
@@ -3204,6 +3186,9 @@ msgstr "Dauerhaften PIN-Code eingeben"
 
 msgid "Enter pin code"
 msgstr "PIN-Code eingeben"
+
+msgid "Enter text and exit"
+msgstr "Text eingeben und danach beenden"
 
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
 msgstr "Geben Sie die Frequenz ein, mit der Ihr LNB zwischen Low- und High-Band wechselt. Weitere Informationen finden Sie im Datenblatt Ihres LNB."
@@ -3994,6 +3979,9 @@ msgstr "Festplatte"
 msgid "Harddisk Setup"
 msgstr "Festplatten Einstellungen"
 
+msgid "Harddisk is not in sleepmode it could be in use!"
+msgstr "Festtplatte ist nicht im Ruhemodus und könnte noch in Benutzung sein"
+
 msgid "Hardware: "
 msgstr "Hardware: "
 
@@ -4081,6 +4069,12 @@ msgstr "Hotkey-Tastenbelegung"
 msgid "Hotkey zap"
 msgstr "Tastenkombination \"umschalten\""
 
+msgid "Hotswitchable"
+msgstr "Umschaltbar"
+
+msgid "Hotswitchable tuner"
+msgstr "Umschaltbare Tuner-Typen:"
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "Wie viele Minuten wollen Sie der Aufnahme hinzufügen?"
 
@@ -4130,13 +4124,16 @@ msgid "Icons"
 msgstr "Symbole"
 
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
-msgstr ""
+msgstr "Wenn aktiviert, dann wird das Lesezeichen mit Aufnahmeverzeichniss aktualisiert."
 
 msgid "If enabled, display shows 12 chars instead 8, but in latin-1/translit only."
 msgstr "Wenn aktiviert, zeigt das Display 12 Zeichen statt 8, aber nur in Latein-1 / Translit."
 
 msgid "If enabled, then there will be displayed icons for new/unseen items too."
 msgstr "Wenn diese Option aktiviert ist, werden auch Symbole für neue / ungesehene Objekte angezeigt."
+
+msgid "If is disabled, then after Copy/Move will not be target directory stored into bookmarks."
+msgstr "Wenn deaktiviert, wird nach dem Kopieren/Verschieben das Zielverzeichnis nicht in den Lesezeichen gespeichert."
 
 msgid "If is enabled and movie playback is finished, then after return to movielist will not be automaticaly start service playback."
 msgstr "Wenn aktiviert und die Filmwiedergabe fertig ist, wird der zuletzt geschaute Sender nach der Rückkehr in die Filmliste  nicht automatisch gestartet."
@@ -4383,6 +4380,9 @@ msgstr "Ungültiges Verzeichnis ausgewählt: %s"
 
 msgid "Invalid location"
 msgstr "Fehlerhafter Ort"
+
+msgid "Invalid reason"
+msgstr "Fehlerhafter Grund"
 
 msgid "Invalid transponder data"
 msgstr "Ungültige Transponderdaten"
@@ -4894,7 +4894,6 @@ msgstr "Sendeintervall Mininum"
 msgid "Missing "
 msgstr "Fehlend"
 
-#, fuzzy
 msgid "Mode"
 msgstr "Modus"
 
@@ -4911,10 +4910,6 @@ msgstr "Modell"
 
 msgid "Model: "
 msgstr "Modell: "
-
-#, fuzzy
-msgid "Modes"
-msgstr "Modus"
 
 msgid "Modulation"
 msgstr "Modulation"
@@ -5054,9 +5049,8 @@ msgstr "Multi channel downmix"
 msgid "Multi-EPG bouquet selection"
 msgstr "Multi-EPG Bouquet Auswahl"
 
-#, fuzzy
 msgid "MultiType"
-msgstr "Multimedia"
+msgstr "Multifunktion"
 
 msgid "Multiboot"
 msgstr "Multi-Boot-System"
@@ -5278,9 +5272,8 @@ msgstr "Kein freier Index verfügbar"
 msgid "No free tuner!"
 msgstr "Kein freier Tuner!"
 
-#, fuzzy
 msgid "No images found"
-msgstr "Keine Netzwerke gefunden"
+msgstr "Keine Images gefunden"
 
 msgid "No network connection available."
 msgstr "Keine Netzwerkverbindung verfügbar."
@@ -5314,6 +5307,9 @@ msgstr "Kein Standby"
 
 msgid "No stream clients"
 msgstr "Keine Stream-Clients"
+
+msgid "No suitable sat tuner found!"
+msgstr "Kein verwendbarer Sat Tuner gefunden!"
 
 msgid "No tags are set on these movies."
 msgstr "Keine Tags für diese Filme gesetzt."
@@ -5915,9 +5911,8 @@ msgstr "Bitte stellen Sie den Tuner Q ein"
 msgid "Please set up tuner R"
 msgstr "Bitte stellen Sie den Tuner R ein"
 
-#, fuzzy
 msgid "Please set your time zone"
-msgstr "Einstellungen für Tuner A"
+msgstr "Stellenen sie ihre lokale Zeitzone ein"
 
 msgid "Please setup the following basic configs!"
 msgstr ""
@@ -6124,18 +6119,8 @@ msgstr "Vorbereitung läuft… Bitte warten"
 msgid "Press '0' to toggle PiP mode"
 msgstr "Drücke '0' zum Umschalten des PiP-Modus"
 
-#, fuzzy
 msgid "Press 'OK' for attach function."
 msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
-
-msgid "Press 'OK' for attach next function or 'CH+/-' for edit attached."
-msgstr ""
-
-msgid "Press 'OK' for remove item or 'CH+/-' for toggle to list of features."
-msgstr ""
-
-msgid "Press 'OK' for remove item or < > for change order or 'CH+/-' for toggle to list of features."
-msgstr ""
 
 msgid "Press INFO on your remote control for additional information."
 msgstr "INFO drücken für zusätzliche Informationen."
@@ -6185,12 +6170,6 @@ msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
 
 msgid "Press OK, save and exit..."
 msgstr "Drücke OK zum Speichern und Beenden…"
-
-msgid "Press or select button and then press 'OK' for attach function."
-msgstr ""
-
-msgid "Press or select button and then press 'OK' for attach next function or edit attached."
-msgstr ""
 
 msgid "Press yellow to set this interface as default interface."
 msgstr "Drücken Sie Gelb, um diese Schnittstelle als Standard zu setzen."
@@ -6615,10 +6594,6 @@ msgstr "Benutzeroberfläche (Enigma) neu starten"
 msgid "Restart enigma in debug mode"
 msgstr "Benutzeroberfläche (Enigma) im Debugmodus starten"
 
-#, fuzzy
-msgid "Restart enigma in standard mode"
-msgstr "Benutzeroberfläche (Enigma) im Debugmodus starten"
-
 msgid "Restart network"
 msgstr "Netzwerk neu starten"
 
@@ -6846,10 +6821,6 @@ msgstr "Saudi Arabia"
 msgid "Save"
 msgstr "Speichern"
 
-#, fuzzy
-msgid "Save / Enter text and exit"
-msgstr "Text eingeben und danach beenden"
-
 msgid "Save and exit"
 msgstr "Speichern und beenden"
 
@@ -6967,10 +6938,6 @@ msgstr "Scroll Verzögerrung"
 msgid "Scroll repeats"
 msgstr "Scroll wiederholt"
 
-#, fuzzy
-msgid "Search"
-msgstr "Durchsuche"
-
 msgid "Search east"
 msgstr "Östlich suchen"
 
@@ -7025,17 +6992,17 @@ msgstr "Wählen Sie “A” oder “B”, wenn Ihr Antennensystem dies erfordert
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Wählen Sie “FBC SCR”, wenn dieser Tuner ein Unicable/SCR-Gerät verwendet. Für alle anderen Setups wählen Sie “FBC automatisch”."
 
-msgid "Select 'Yes' when you want to configure this tuner for ATSC"
-msgstr ""
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr "Wollen Sie die Tuner DVB-ATSC konfigurieren?"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
-msgstr ""
+msgstr "Wollen Sie den Tuner DVB-C konfigurieren?"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
-msgstr ""
+msgstr "Wollen Sie den Tuner DVB-S konfigurieren?"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
-msgstr ""
+msgstr "Wollen Sie den Tuner DVB-T konfigurieren?"
 
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Wählen Sie “Band”, wenn Sie ein “universelles” LNB verwenden, andernfalls konsultieren Sie Ihr LNB-Datenblatt."
@@ -8088,7 +8055,6 @@ msgstr "Standby"
 msgid "Standby / restart"
 msgstr "Standby / Neustart"
 
-#, fuzzy
 msgid "Standby LED"
 msgstr "LED im Standby-Modus"
 
@@ -8403,6 +8369,9 @@ msgstr "Zum vorhergehenden Unterkanal schalten"
 msgid "Switch to radio mode"
 msgstr "Wechsel zum Radio Modus"
 
+msgid "Switchable tuner types:"
+msgstr "Umschaltbare Tuner-Typen:"
+
 msgid "Switzerland"
 msgstr "Die Schweiz"
 
@@ -8427,14 +8396,12 @@ msgstr "System"
 msgid "System & Modulation"
 msgstr "System & Modulation"
 
-#, fuzzy
 msgid "T2MI PID"
 msgstr "PMT PID"
 
 msgid "T2MI PLP"
 msgstr ""
 
-#, fuzzy
 msgid "T2MI PLP ID"
 msgstr "PLP ID"
 
@@ -8721,8 +8688,8 @@ msgstr ""
 "Sie ist für den normalen Benutzer nicht relevant.\n"
 "Es besteht kein Grund zur Beunruhigung, wenn Werte angezeigt werden, die suspekt erscheinen!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware."
-msgstr ""
+msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgstr "Dies ist ein Multitype-Tuner. Die verfügbaren Optionen hängen von der Hardware ab. Kabel und terrestrisch können nicht gleichzeitig konfiguriert werden. Wenn Sie als Kabel + Satellit oder terrestrisch + Satellit verwenden wollen, konfigurieren Sie zunächst Kabel / terrestrisch und speichern Sie dann. Erneut öffnen und als Satellit konfigurieren."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "In dieser Reihenfolge werden DiSEqC-Befehle an das Antennensystem gesendet. Die Reihenfolge muss genau der Reihenfolge entsprechen, in der die physikalischen Geräte entlang des Signalkabels angeordnet sind (ausgehend vom Empfängerende)."
@@ -9184,14 +9151,12 @@ msgstr "Turkmenistan"
 msgid "Turks and Caicos Islands"
 msgstr "Turks- und Caicosinseln"
 
-#, fuzzy
 msgid "Turn on the power LED during deep standby."
 msgstr "Die LED im Standy-Modus ausschalten."
 
 msgid "Turn on the power LED during standby."
 msgstr "Die LED im Standy-Modus ausschalten."
 
-#, fuzzy
 msgid "Turn on the power LED."
 msgstr "Die LED im Standy-Modus ausschalten."
 
@@ -9246,7 +9211,6 @@ msgstr "Ukrainisch"
 msgid "Unable to backup settings as the AutoBackup plugin is missing, do you want to continue?"
 msgstr "Sie können die Einstellungen nicht sichern, da das AutoBackup-Plugin fehlt. Wollen Sie fortfahren?"
 
-#, fuzzy
 msgid "Unable to create the required directories on the media (e.g. USB stick or Harddisk) - Please verify media and try again!"
 msgstr "Es konnten nicht die benötigten Verzeichnisse auf dem Medium erstellt werden - Bitte überprüfen sie das Medium und versuchen sie es nochmal!"
 
@@ -10724,6 +10688,9 @@ msgstr "Unterhaltung (6-14 Jahre)"
 msgid "epg cache backup"
 msgstr "EPG-Cache Sicherung"
 
+msgid "equal to"
+msgstr "Gleich wie"
+
 msgid "equestrian"
 msgstr "Pferdesport"
 
@@ -10936,6 +10903,9 @@ msgstr "gesperrt"
 
 msgid "long"
 msgstr "lang"
+
+msgid "loopthrough to"
+msgstr "Verbunden mit"
 
 msgid "magazines/reports/documentary"
 msgstr "Magazine/Reportagen/Dokumentationen"
@@ -11240,6 +11210,9 @@ msgstr "Status"
 msgid "science fiction/fantasy/horror"
 msgstr "Science-Fiction/Fantasie/Horror"
 
+msgid "second cable of motorized LNB"
+msgstr "Zweites Kabel vom Rotor"
+
 msgid "seconds"
 msgstr "Sekunden"
 
@@ -11470,7 +11443,6 @@ msgstr "untestbar"
 msgid "until standby/restart"
 msgstr "Bis zum Standby/Neustart"
 
-#, fuzzy
 msgid "update bookmarks"
 msgstr "Automatische Lesezeichen"
 
