all po files updated from develop at 2019-05-12 10:04

--- a/po/de.po
+++ b/po/de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-05-12 10:02+0200\n"
 "PO-Revision-Date: 2018-10-22T21:44:30+02:00\n"
 "Last-Translator: daddelfalk <OpenPLi>\n"
 "Language-Team: Sfteam  angelo2807@hotmail.com\n"
@@ -163,6 +163,10 @@ msgstr " (geringer als in jedem auto)"
 
 msgid " extensions."
 msgstr " Erweiterungen."
+
+#, fuzzy
+msgid " min"
+msgstr "%d min"
 
 msgid " ms"
 msgstr " ms"
@@ -974,6 +978,14 @@ msgid "Also on standby"
 msgstr "Auch in Standby"
 
 msgid "Alternative"
+msgstr "Alternativen hinzufügen"
+
+#, fuzzy
+msgid "Alternative 1"
+msgstr "Alternativen hinzufügen"
+
+#, fuzzy
+msgid "Alternative 2"
 msgstr "Alternativen hinzufügen"
 
 msgid "Alternative URL for images listed on FlashImage"
@@ -1857,7 +1869,8 @@ msgstr "Konfigurationsmodus: %s"
 msgid "Configuration..."
 msgstr "Konfiguration…"
 
-msgid "Configure DVB-ATSC"
+#, fuzzy
+msgid "Configure ATSC"
 msgstr "Konfiguriere DVB-ATSC"
 
 msgid "Configure DVB-C"
@@ -2272,9 +2285,6 @@ msgstr "Aufnahme wegen in Konflikt stehendem Timer %s fehlgeschlagen"
 #, python-format
 msgid "Could not record due to invalid service %s"
 msgstr "Aufnahme wegen ungültigem Kanal %s fehlgeschlagen"
-
-msgid "Could not some setup the required directories on the media (e.g. USB stick) - Please verify media and try again!"
-msgstr "Es konnten nicht die benötigten Verzeichnisse auf dem Medium erstellt werden - Bitte überprüfen sie das Medium und versuchen sie es nochmal!"
 
 msgid "Country"
 msgstr "Land"
@@ -3187,9 +3197,6 @@ msgstr "Dauerhaften PIN-Code eingeben"
 msgid "Enter pin code"
 msgstr "PIN-Code eingeben"
 
-msgid "Enter text and exit"
-msgstr "Text eingeben und danach beenden"
-
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
 msgstr "Geben Sie die Frequenz ein, mit der Ihr LNB zwischen Low- und High-Band wechselt. Weitere Informationen finden Sie im Datenblatt Ihres LNB."
 
@@ -3979,9 +3986,6 @@ msgstr "Festplatte"
 msgid "Harddisk Setup"
 msgstr "Festplatten Einstellungen"
 
-msgid "Harddisk is not in sleepmode it could be in use!"
-msgstr "Festtplatte ist nicht im Ruhemodus und könnte noch in Benutzung sein"
-
 msgid "Hardware: "
 msgstr "Hardware: "
 
@@ -4069,12 +4073,6 @@ msgstr "Hotkey-Tastenbelegung"
 msgid "Hotkey zap"
 msgstr "Tastenkombination \"umschalten\""
 
-msgid "Hotswitchable"
-msgstr "Umschaltbar"
-
-msgid "Hotswitchable tuner"
-msgstr "Umschaltbare Tuner-Typen:"
-
 msgid "How many minutes do you want add to the recording?"
 msgstr "Wie viele Minuten wollen Sie der Aufnahme hinzufügen?"
 
@@ -4131,9 +4129,6 @@ msgstr "Wenn aktiviert, zeigt das Display 12 Zeichen statt 8, aber nur in Latein
 
 msgid "If enabled, then there will be displayed icons for new/unseen items too."
 msgstr "Wenn diese Option aktiviert ist, werden auch Symbole für neue / ungesehene Objekte angezeigt."
-
-msgid "If is disabled, then after Copy/Move will not be target directory stored into bookmarks."
-msgstr "Wenn deaktiviert, wird nach dem Kopieren/Verschieben das Zielverzeichnis nicht in den Lesezeichen gespeichert."
 
 msgid "If is enabled and movie playback is finished, then after return to movielist will not be automaticaly start service playback."
 msgstr "Wenn aktiviert und die Filmwiedergabe fertig ist, wird der zuletzt geschaute Sender nach der Rückkehr in die Filmliste  nicht automatisch gestartet."
@@ -4380,9 +4375,6 @@ msgstr "Ungültiges Verzeichnis ausgewählt: %s"
 
 msgid "Invalid location"
 msgstr "Fehlerhafter Ort"
-
-msgid "Invalid reason"
-msgstr "Fehlerhafter Grund"
 
 msgid "Invalid transponder data"
 msgstr "Ungültige Transponderdaten"
@@ -4911,6 +4903,10 @@ msgstr "Modell"
 msgid "Model: "
 msgstr "Modell: "
 
+#, fuzzy
+msgid "Modes"
+msgstr "Modus"
+
 msgid "Modulation"
 msgstr "Modulation"
 
@@ -5307,9 +5303,6 @@ msgstr "Kein Standby"
 
 msgid "No stream clients"
 msgstr "Keine Stream-Clients"
-
-msgid "No suitable sat tuner found!"
-msgstr "Kein verwendbarer Sat Tuner gefunden!"
 
 msgid "No tags are set on these movies."
 msgstr "Keine Tags für diese Filme gesetzt."
@@ -6122,6 +6115,16 @@ msgstr "Drücke '0' zum Umschalten des PiP-Modus"
 msgid "Press 'OK' for attach function."
 msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
 
+#, fuzzy
+msgid "Press 'OK' for attach next function or 'CH+/-' for edit attached."
+msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
+
+msgid "Press 'OK' for remove item or 'CH+/-' for toggle to list of features."
+msgstr ""
+
+msgid "Press 'OK' for remove item or < > for change order or 'CH+/-' for toggle to list of features."
+msgstr ""
+
 msgid "Press INFO on your remote control for additional information."
 msgstr "INFO drücken für zusätzliche Informationen."
 
@@ -6170,6 +6173,13 @@ msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
 
 msgid "Press OK, save and exit..."
 msgstr "Drücke OK zum Speichern und Beenden…"
+
+#, fuzzy
+msgid "Press or select button and then press 'OK' for attach function."
+msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
+
+msgid "Press or select button and then press 'OK' for attach next function or edit attached."
+msgstr ""
 
 msgid "Press yellow to set this interface as default interface."
 msgstr "Drücken Sie Gelb, um diese Schnittstelle als Standard zu setzen."
@@ -6594,6 +6604,10 @@ msgstr "Benutzeroberfläche (Enigma) neu starten"
 msgid "Restart enigma in debug mode"
 msgstr "Benutzeroberfläche (Enigma) im Debugmodus starten"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Benutzeroberfläche (Enigma) im Debugmodus starten"
+
 msgid "Restart network"
 msgstr "Netzwerk neu starten"
 
@@ -6821,6 +6835,10 @@ msgstr "Saudi Arabia"
 msgid "Save"
 msgstr "Speichern"
 
+#, fuzzy
+msgid "Save / Enter text and exit"
+msgstr "Text eingeben und danach beenden"
+
 msgid "Save and exit"
 msgstr "Speichern und beenden"
 
@@ -6938,6 +6956,10 @@ msgstr "Scroll Verzögerrung"
 msgid "Scroll repeats"
 msgstr "Scroll wiederholt"
 
+#, fuzzy
+msgid "Search"
+msgstr "Durchsuche"
+
 msgid "Search east"
 msgstr "Östlich suchen"
 
@@ -6992,7 +7014,8 @@ msgstr "Wählen Sie “A” oder “B”, wenn Ihr Antennensystem dies erfordert
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Wählen Sie “FBC SCR”, wenn dieser Tuner ein Unicable/SCR-Gerät verwendet. Für alle anderen Setups wählen Sie “FBC automatisch”."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+#, fuzzy
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr "Wollen Sie die Tuner DVB-ATSC konfigurieren?"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
@@ -8369,9 +8392,6 @@ msgstr "Zum vorhergehenden Unterkanal schalten"
 msgid "Switch to radio mode"
 msgstr "Wechsel zum Radio Modus"
 
-msgid "Switchable tuner types:"
-msgstr "Umschaltbare Tuner-Typen:"
-
 msgid "Switzerland"
 msgstr "Die Schweiz"
 
@@ -8688,8 +8708,8 @@ msgstr ""
 "Sie ist für den normalen Benutzer nicht relevant.\n"
 "Es besteht kein Grund zur Beunruhigung, wenn Werte angezeigt werden, die suspekt erscheinen!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Dies ist ein Multitype-Tuner. Die verfügbaren Optionen hängen von der Hardware ab. Kabel und terrestrisch können nicht gleichzeitig konfiguriert werden. Wenn Sie als Kabel + Satellit oder terrestrisch + Satellit verwenden wollen, konfigurieren Sie zunächst Kabel / terrestrisch und speichern Sie dann. Erneut öffnen und als Satellit konfigurieren."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "In dieser Reihenfolge werden DiSEqC-Befehle an das Antennensystem gesendet. Die Reihenfolge muss genau der Reihenfolge entsprechen, in der die physikalischen Geräte entlang des Signalkabels angeordnet sind (ausgehend vom Empfängerende)."
@@ -10688,9 +10708,6 @@ msgstr "Unterhaltung (6-14 Jahre)"
 msgid "epg cache backup"
 msgstr "EPG-Cache Sicherung"
 
-msgid "equal to"
-msgstr "Gleich wie"
-
 msgid "equestrian"
 msgstr "Pferdesport"
 
@@ -10903,9 +10920,6 @@ msgstr "gesperrt"
 
 msgid "long"
 msgstr "lang"
-
-msgid "loopthrough to"
-msgstr "Verbunden mit"
 
 msgid "magazines/reports/documentary"
 msgstr "Magazine/Reportagen/Dokumentationen"
@@ -11209,9 +11223,6 @@ msgstr "Status"
 
 msgid "science fiction/fantasy/horror"
 msgstr "Science-Fiction/Fantasie/Horror"
-
-msgid "second cable of motorized LNB"
-msgstr "Zweites Kabel vom Rotor"
 
 msgid "seconds"
 msgstr "Sekunden"
