--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-05-21 20:42+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -1765,6 +1765,24 @@ msgstr "Kamerun"
 
 msgid "Can be used for different fps between external subtitles and video."
 msgstr "Může být použito při odlišné fps mezi obrazem a externími titulky."
+
+msgid ""
+"Can be used to test defect pixels on TV screen.\n"
+"\n"
+"Available color test screens:\n"
+"\n"
+"red\n"
+"green\n"
+"blue\n"
+"white\n"
+"black\n"
+"cyan\n"
+"magenta\n"
+"yellow\n"
+"\n"
+"Screens change with left/right buttons or use red, green, blue to toggle.\n"
+"Yellow for returning back to this intro"
+msgstr ""
 
 msgid "Can only find a network drive to store the backup this means after the flash the autorestore will not work. Alternativaly you can mount the network drive after the flash and perform a manufacurer reset to autorestore"
 msgstr "Nalezení pouze síťové jednotky pro uložení zálohy znamená, že po nahrání image automatická obnova nebude fungovat. Alternativně můžete po nahrání image připojit síťovou jednotku a provést tovární nastavení s automatickým obnovením"
@@ -6542,6 +6560,9 @@ msgstr "Pilot"
 
 msgid "Pitcairn"
 msgstr "Pitcairnovy ostrovy"
+
+msgid "Pixels\n"
+msgstr ""
 
 #
 msgid "Play"
@@ -12971,6 +12992,14 @@ msgstr "Přeskočit dozadu"
 #
 msgid "skip forward"
 msgstr "Přeskočit dopředu"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "Slot%s - %s mód 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "Slot%s - %s mód 1 (aktuální image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
