--- a/po/cs.po
+++ b/po/cs.po
@@ -1783,6 +1783,21 @@ msgid ""
 "Screens change with left/right buttons or use red, green, blue to toggle.\n"
 "Yellow for returning back to this intro"
 msgstr ""
+"Lze využít pro detekci vadných bodů obrazovky.\n"
+"\n"
+"Dostupné testovací obrazovky:\n"
+"\n"
+"červená\n"
+"zelená\n"
+"modrá\n"
+"bílá\n"
+"černá\n"
+"azurová\n"
+"purpurová\n"
+"žlutá\n"
+"\n"
+"Změnu provádějte pomocí tlačítek vlevo/vpravo nebo použijte červené, zelené a modré tlačítko.\n"
+"Žluté tlačítko vrací zpět na tuto obrazovku."
 
 msgid "Can only find a network drive to store the backup this means after the flash the autorestore will not work. Alternativaly you can mount the network drive after the flash and perform a manufacurer reset to autorestore"
 msgstr "Nalezení pouze síťové jednotky pro uložení zálohy znamená, že po nahrání image automatická obnova nebude fungovat. Alternativně můžete po nahrání image připojit síťovou jednotku a provést tovární nastavení s automatickým obnovením"
@@ -6058,9 +6073,8 @@ msgid "No free tuner!"
 msgstr "Žádný volný tuner!"
 
 #
-#, fuzzy
 msgid "No images found"
-msgstr "Žádné sítě nenalezeny"
+msgstr "Žádný obraz nenalezen"
 
 #
 msgid "No network connection available."
@@ -6562,7 +6576,7 @@ msgid "Pitcairn"
 msgstr "Pitcairnovy ostrovy"
 
 msgid "Pixels\n"
-msgstr ""
+msgstr "Pixely\n"
 
 #
 msgid "Play"
@@ -6811,9 +6825,8 @@ msgid "Please set up tuner R"
 msgstr "Prosím, nastavte tuner R"
 
 #
-#, fuzzy
 msgid "Please set your time zone"
-msgstr "Prosím, nastavte tuner A"
+msgstr "Prosím, nastavte časové pásmo"
 
 msgid "Please setup the following basic configs!"
 msgstr "Prosím, nastavte následující základní nastavení!"
@@ -9738,7 +9751,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®20.4.2019"
+"®22.5.2019"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -12993,13 +13006,13 @@ msgstr "Přeskočit dozadu"
 msgid "skip forward"
 msgstr "Přeskočit dopředu"
 
-#, fuzzy, python-format
+#, python-format
 msgid "slot%s - %s"
-msgstr "Slot%s - %s mód 1"
+msgstr "Slot%s - %s"
 
-#, fuzzy, python-format
+#, python-format
 msgid "slot%s - %s (current image)"
-msgstr "Slot%s - %s mód 1 (aktuální image)"
+msgstr "Slot%s - %s (aktuální image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
